<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clStatsHeader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/vodka"
    android:paddingStart="@dimen/_16sdp"
    android:paddingTop="@dimen/_8sdp"
    android:paddingEnd="@dimen/_16sdp"
    android:paddingBottom="@dimen/_8sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:gravity="center"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvHeaderValue1"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Batting" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeaderValue1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:gravity="center"
        android:singleLine="true"
        android:text="--"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="@id/tvHeader"
        app:layout_constraintEnd_toStartOf="@id/tvHeaderValue2"
        app:layout_constraintStart_toEndOf="@id/tvHeader"
        app:layout_constraintTop_toTopOf="@id/tvHeader"
        tools:text="@string/test" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeaderValue2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:gravity="center"
        android:singleLine="true"
        android:text="--"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="@id/tvHeaderValue1"
        app:layout_constraintEnd_toStartOf="@id/tvHeaderValue3"
        app:layout_constraintStart_toEndOf="@id/tvHeaderValue1"
        app:layout_constraintTop_toTopOf="@id/tvHeaderValue1"
        tools:text="@string/odi" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeaderValue3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:gravity="center"
        android:singleLine="true"
        android:text="--"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="@id/tvHeaderValue2"
        app:layout_constraintEnd_toStartOf="@id/tvHeaderValue4"
        app:layout_constraintStart_toEndOf="@id/tvHeaderValue2"
        app:layout_constraintTop_toTopOf="@id/tvHeaderValue2"
        tools:text="@string/t20" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeaderValue4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:gravity="center"
        android:singleLine="true"
        android:text="--"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="@id/tvHeaderValue3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvHeaderValue3"
        app:layout_constraintTop_toTopOf="@id/tvHeaderValue3"
        tools:text="@string/ipl" />

</androidx.constraintlayout.widget.ConstraintLayout>